Busy switching how publications are included

--- a/_config.yml
+++ b/_config.yml
@@ -52,23 +52,23 @@ defaults:
 #     values:
 #       layout: single
 
-scholar:
-  style: apa
-  locale: en
-
-  sort_by: year
-  order: descending
-
-  source: ./_bibliography
-  bibliography: publications.bib
-  bibliography_template: "{{reference}}"
-
-  replace_strings: true
-  join_strings:    true
-
-  details_dir:    bibliography
-  details_layout: bibtex.html
-  details_link:   Details
-  use_raw_bibtex_entry: true
-
-  query: "@*"
+#scholar:
+#  style: apa
+#  locale: en
+#
+#  sort_by: year
+#  order: descending
+#
+#  source: ./_bibliography
+#  bibliography: publications.bib
+#  bibliography_template: "{{reference}}"
+#
+#  replace_strings: true
+#  join_strings:    true
+#
+#  details_dir:    bibliography
+#  details_layout: bibtex.html
+#  details_link:   Details
+#  use_raw_bibtex_entry: true
+#
+#  query: "@*"
