Updated email address

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: Michael H. Gardner
 # subtitle: Assistant Professor
 # subtitle: Department of Geological Sciences and Engineering, University of Nevada, Reno
-email: mhgardner@berkeley.edu
+email: mhgardner@unr.edu
 url: "https://github.io.shellshocked2003"
 timezone: America/Los_Angeles
 
