Updates to website to include team members, teaching, and recent publications

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Michael H. Gardner
+title: Gardner Geosystems Lab
 # subtitle: Assistant Professor
 # subtitle: Department of Geological Sciences and Engineering, University of Nevada, Reno
 email: mhgardner@unr.edu
