Updated photo for Jakob

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -29,7 +29,7 @@
   role: graduate
   position: PhD Student (co-advised with Philipp Ruprecht)
   uni: University of Nevada, Reno
-  image: question.png
+  image: scheelCropped.jpg
   email: 
   topic: Mafic magmatic enclaves as tracer of protracted mixing and hybridization
 
