Added photo for Kevin

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -45,6 +45,6 @@
   role: undergrad
   position: Undergraduate Student
   uni: University of Nevada, Reno
-  image: question.png
+  image: ostfeld.jpg
   email: kostfeld[@]nevada[.]unr[.]edu
   topic: Multispectral Imaging for Identifying Erosional and Depositional Patterns During Extreme Flooding
